--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Ejercicio con API</title>
 </head>
 <body>
-  <h1>API</h1>
+  <h1>Rick and Morty</h1>
+  <main-component></main-component>
+  <script src="./components/main-component.js" type="module"></script>
 </body>
 </html>
